--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
 	<section class="our-students">
 		<div class="container">
-			<h2>Работы наших студентов.</h2>
+			<h2>Работы студентов.</h2>
 			<div id="rg-gallery" class="rg-gallery">
 			<div class="rg-thumbs">
 				<!-- Elastislide Carousel Thumbnail Viewer -->
@@ -530,25 +530,8 @@
 						<span class="es-nav-next">Next</span>
 					</div>
 					<div class="es-carousel">
-						<ul>
-							<li><a href="#"><img src="images/images/thumbs/1.jpg" data-large="images/images/1.jpg" alt="image01" data-description="Дельфины на закате" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/2.jpg" data-large="images/images/2.jpg" alt="image02" data-description="Перцы в бокале" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/3.jpg" data-large="images/images/3.jpg" alt="image03" data-description="Сакура" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/4.jpg" data-large="images/images/4.jpg" alt="image04" data-description="Лилия" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/5.jpg" data-large="images/images/5.jpg" alt="image05" data-description="Голая натура" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/6.jpg" data-large="images/images/6.jpg" alt="image06" data-description="Натюрморт с цыбулей" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/7.jpg" data-large="images/images/7.jpg" alt="image07" data-description="Натюрморт с виноградом" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/8.jpg" data-large="images/images/8.jpg" alt="image08" data-description="Натюрморт с грушами" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/9.jpg" data-large="images/images/9.jpg" alt="image09" data-description="Натюрморт творческая атмосфера" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/10.jpg" data-large="images/images/10.jpg" alt="image10" data-description="Разные работы" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/11.jpg" data-large="images/images/11.jpg" alt="image11" data-description="Натюоморт с мандаринами" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/12.jpg" data-large="images/images/12.jpg" alt="image12" data-description="Натюрморт с латунным горшком" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/13.jpg" data-large="images/images/13.jpg" alt="image13" data-description="Натюрморт с кувшином" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/14.jpg" data-large="images/images/14.jpg" alt="image14" data-description="Натюрморт простым карандашом" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/15.jpg" data-large="images/images/15.jpg" alt="image15" data-description="Череп" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/16.jpg" data-large="images/images/16.jpg" alt="image16" data-description="Натюрморт карандашом" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/17.jpg" data-large="images/images/17.jpg" alt="image17" data-description="Березы" /></a></li>
-							<li><a href="#"><img src="images/images/thumbs/18.jpg" data-large="images/images/18.jpg" alt="image18" data-description="Голова ребенка" /></a></li>
+						<ul id="ul-carousel">
+						<!-- images will be attached here -->
 						</ul>
 					</div>
 				</div>
@@ -702,7 +685,7 @@
 	<script src="js/granim.min.js"></script>
 	<!-- <script src="js/particles.min.js"></script> -->
 
-	
+	<script src="js/main.js"></script>
 	<script type="text/javascript" src="js/jquery.tmpl.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="js/jquery.elastislide.js"></script>
@@ -719,7 +702,7 @@
 	<script src="https://cdn.rawgit.com/sarcadass/granim.js/master/dist/granim.min.js"></script> -->
 
 
-    <script src="js/main.js"></script>
+
 
 
     
