--- a/coloristic-course-minsk.html
+++ b/coloristic-course-minsk.html
@@ -5,7 +5,7 @@
 	<title>Курс "Цветоведение".</title>
 
     <meta name="viewport" content="widdiv=device-widdiv, initial-scale=1.0" />
-    <meta name="diveme-color" content="#E7D0BC">
+    <meta name="theme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
     <meta name="description" content="Программа обучения по курсу 'Цветоведение'" />        
