--- a/index.html
+++ b/index.html
@@ -314,7 +314,23 @@
 								<p>цена 300 руб/курс</p>
 						</div>
 					</div>
-
+					
+					<div class="course-card course-13">
+						<div class="course-image">
+							<img src="images/deti-izo.jpg" alt="Мастер класс по ботаническому барельефу">
+						</div>
+						<div class="course-description">
+							<h2 class="course-header" property="name">
+								Детское изобразительное искусство.
+							</h2>
+							<div class="course-about" property="description">
+								<p>Мы реально обучаем детей азам и основам рисования, а не развлекаем их. Курс является хорошей подготовкой для изучения академического рисунка и живописи в подростковом возрасте.</p>
+							</div>
+						</div>
+						<div class="course-price">
+								<p>цена 100 руб/мес</p>
+						</div>
+					</div>
 
 					<div class="course-card course-11">
 						<div class="course-image">
