--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <meta name="theme-color" content="#E7D0BC">
     <meta name="yandex-verification" content="72eb25d31231b08c" />
     <meta name="google-site-verification" content="BQUnE9QC0RiMLb3R88hBEGOxYAcoRHbkwguHm44C7OA" />
-    <meta name="description" content="Ищете хорошие курсы рисования в Минске?- Звоните +37529 6633164. Подготовка к поступлению, курсы рисования для начинающих, курсы рисунка для взрослых, творческая атмосфера, хорошие цены." />        
-    <meta name="keywords" content="Курсы рисования, минск, художественная школа, академический рисунок, скульптура, курсы рисунка" />    
+
+    <meta name="description" content="Учим рисовать. Академическая база. На холсте, на бумаге, в Photoshop. ст.м. СПОРТИВНАЯ. Курсы рисования для начинающих, курсы рисунка для взрослых, творческая атмосфера, много места, доступные цены." /> 
+
+    <meta name="keywords" content="Курсы рисования, курсы цифрового рисунка в минске, художественная школа, академический рисунок, скульптура, курсы рисунка" />    
 
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/style-gallery.css" />
 	<link rel="stylesheet" type="text/css" href="css/elastislide.css" />
