--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 	<!-- <link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet"> -->
-	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/style-gallery.css" />
 	<link rel="stylesheet" type="text/css" href="css/elastislide.css" />
@@ -101,9 +101,6 @@
 					<h3>Курсы живописи.</h2>
 					<p>Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами.</p>
 					<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
-
-					<h3>Курсы скульптуры.</h2>
-					<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
 				</div>
 
 				<div class="main-img-3">
@@ -277,7 +274,7 @@
 						</div>
 					</div>
 				
-					<div class="course-card course-5">
+<!-- 					<div class="course-card course-5">
 						<div class="course-image">
 							<img src="images/sculpting.jpg" alt="Курсы по скульптуре. Подготовка к поступлению.">
 						</div>
@@ -298,9 +295,9 @@
 						<div class="course-price">
 								<p>цена 90 руб/мес</p>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="course-card course-6">
+<!-- 					<div class="course-card course-6">
 						<div class="course-image">
 							<img src="images/sculpting-project.jpg" alt="Курсы по скульптуре. Индивидуальные занятия.">
 						</div>
@@ -316,9 +313,9 @@
 						<div class="course-price">
 								<p>цена 300 руб/курс</p>
 						</div>
-					</div>
+					</div> -->
 					
-					<div class="course-card course-13">
+<!-- 					<div class="course-card course-13">
 						<div class="course-image">
 							<img src="images/deti-izo.jpg" alt="Мастер класс по ботаническому барельефу">
 						</div>
@@ -333,9 +330,9 @@
 						<div class="course-price">
 								<p>цена 100 руб/мес</p>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="course-card course-11">
+<!-- 					<div class="course-card course-11">
 						<div class="course-image">
 							<img src="images/botanic.jpg" alt="Мастер класс по ботаническому барельефу">
 						</div>
@@ -350,7 +347,7 @@
 						<div class="course-price">
 								<p>1шт - 35р. 2шт - 45р.</p>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="course-card course-12">
 						<div class="course-image">
