--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				<div class="main-block-4">
 					<h3>Наши перимущества:</h3>
 					<ul>
-						<li>МНОГО СВОБОДНОГО ПРОСТРАНСТВА НА ОДНОГО УЧАЩЕГОСЯ.</li>
+						<li>Много свободного пространства на одного учащегося.</li><br>
 						<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
 						<li>Удобно добираться (5 мин) от станции метро "Спортивная".</li>
 						<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
@@ -566,8 +566,43 @@
 			<div class="container">
 				<h2>Контакты.</h2>
 				<p class='adress' property="address">  <strong>АДРЕС: </strong> г.Минск, ул. Матусевича 23, 208<br> (Здание бывшего детского сада, 2 этаж) </p>
-				<div class="phone">	<strong>Телефон: </strong> <a property="telephone" href="tel:+375296633164">+375 29 66-33-164</a> </div>
-				<a class="insta" href="https://www.instagram.com/studiya.aquarelle/">Мы в Instagram</a>
+				<div class="phone">	
+					<strong>Телефон: </strong> <a property="telephone" href="tel:+375296633164">+375 29 66-33-164</a> 
+				</div>
+
+				<div class="social-networks">
+
+					<a href="https://www.instagram.com/studiya.aquarelle/">
+						<div class="square">
+							<div class="smm-image insta"></div>
+							Мы в Instagram
+						</div>
+					</a>
+
+					<a href="https://vk.com/doart_by">
+						<div class="square">
+							<div class="smm-image vk"></div>
+							Мы в вКонтакте
+						</div>
+					</a>
+
+					<a href="https://www.facebook.com/studiya.aquarelle/">
+						<div class="square">
+							<div class="smm-image facebook"></div>
+							Мы в Facebook
+						</div>
+					</a>
+
+					<a href="https://ok.ru/group/55671775101090">
+						<div class="square">
+							<div class="smm-image ok"></div>
+							Мы в Одноклассниках
+						</div>
+					</a>
+
+				</div>
+				
+
 				<div class="ways-to-studio">
 					<div class="way">
 						<h4>Дорога в студию от перекрёстка Матусевича - Глебки (за 1 минуту)</h4>
