--- a/index.html
+++ b/index.html
@@ -274,81 +274,6 @@
 						</div>
 					</div>
 				
-<!-- 					<div class="course-card course-5">
-						<div class="course-image">
-							<img src="images/sculpting.jpg" alt="Курсы по скульптуре. Подготовка к поступлению.">
-						</div>
-						<div class="course-description">
-							<h2 class="course-header" property="name">
-								Курс "Скульптура для поступающих".
-							</h2>
-							<div class="course-about" property="description">
-								<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Скульптура"</p>
-								<p>Подростковая группа (14-18 лет)</p>
-							</div>
-						</div>
-						<a href="sculpting-course-for-enrollee-minsk.html">
-							<div class="to-see-the-programm">
-								<p>Программа курса</p>
-							</div>
-						</a>
-						<div class="course-price">
-								<p>цена 90 руб/мес</p>
-						</div>
-					</div> -->
-
-<!-- 					<div class="course-card course-6">
-						<div class="course-image">
-							<img src="images/sculpting-project.jpg" alt="Курсы по скульптуре. Индивидуальные занятия.">
-						</div>
-						<div class="course-description">
-							<h2 class="course-header" property="name">
-								Курс "Интерьерная скульптура. Индивидуальные занятия".
-							</h2>
-							<div class="course-about" property="description">
-								<p>Курс по интерьерной скульптуре для любого уровня подготовки. Полное выполнение одного проекта от штрихов до отливки в материал (гипс). Стоимость материала включена в стоимость.</p>
-								<p>Взрослая группа (от 18 лет)</p>
-							</div>
-						</div>
-						<div class="course-price">
-								<p>цена 300 руб/курс</p>
-						</div>
-					</div> -->
-					
-<!-- 					<div class="course-card course-13">
-						<div class="course-image">
-							<img src="images/deti-izo.jpg" alt="Мастер класс по ботаническому барельефу">
-						</div>
-						<div class="course-description">
-							<h2 class="course-header" property="name">
-								Детское изобразительное искусство.
-							</h2>
-							<div class="course-about" property="description">
-								<p>Мы реально обучаем детей азам и основам рисования, а не развлекаем их. Курс является хорошей подготовкой для изучения академического рисунка и живописи в подростковом возрасте.</p>
-							</div>
-						</div>
-						<div class="course-price">
-								<p>цена 100 руб/мес</p>
-						</div>
-					</div> -->
-
-<!-- 					<div class="course-card course-11">
-						<div class="course-image">
-							<img src="images/botanic.jpg" alt="Мастер класс по ботаническому барельефу">
-						</div>
-						<div class="course-description">
-							<h2 class="course-header" property="name">
-								Мастер класс по ботаническому барельефу.
-							</h2>
-							<div class="course-about" property="description">
-								<p>Увлекательный мастер-класс в ходе которого вы сможете сделать оттиск-композицию из цветов и растений и отлить в гипсе. В результате получите стильное гипсовое панно, которое украсит Ваш дом.</p>
-							</div>
-						</div>
-						<div class="course-price">
-								<p>1шт - 35р. 2шт - 45р.</p>
-						</div>
-					</div> -->
-
 					<div class="course-card course-12">
 						<div class="course-image">
 							<img src="images/for-masters.jpg" alt="Курсы повышения квалификации">
@@ -366,7 +291,6 @@
 								<p>цена договорная</p>
 						</div>
 					</div>
-
 
 					<div class="course-card course-7">
 						<div class="course-image">
@@ -505,14 +429,6 @@
 					<img src="images/aqua-girls-2.png" alt="">
 				</div>
 				<div class="description">
-					<div class="natasha teacher">
-						<div class="name">Наташа</div>
-						<div class="about-teacher">
-							Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
-							Скульптор, художник.<br>
-							Опыт преподавания - 6 лет. (Рисунок, скульптура, анатомия)
-						</div>
-					</div>
 					<div class="nastya teacher">
 						<div class="name">Настя</div>
 						<div class="about-teacher">
@@ -525,7 +441,7 @@
 						<div class="name">Яна</div>
 						<div class="about-teacher">
 							Образование: МГХУ им. А.К.Глебова, Белорусский Государственный педагогический университет.<br>
-							Хужожник - иллюстратор.<br>
+							Художник - иллюстратор.<br>
 							Опыт преподавания - 2 года. (Живопись, анатомия, цветоведение, иллюстрация).
 						</div>
 					</div>
