--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style-gallery.css" />
 	<link rel="stylesheet" type="text/css" href="css/elastislide.css" />
+	<link rel="stylesheet" type="text/css" href="css/magnific-popup.css" />
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -89,6 +90,8 @@
 				<div class="main-img-1">
 					<img src="images/main-parking.jpg" alt="Курсы рисования в Минске, студия Акварель" property="image">
 				</div>
+
+				<div id="instafeed" class="instafeed instagallery">	</div>
 
 				<div class="main-img-2">
 					<img src="images/main-birds.jpg" alt="Птичкина студии Акварель">
@@ -547,6 +550,10 @@
 				ИП Домбровская - УНП 193072191
 			</div>
 
+			<div class="terms">
+				<a href="terms.html">Пользовательское соглашение и политика конфиденциальности.</a>
+			</div>
+
 	<!-- 		<div class="flowers">
 				<div class="flower f-1"></div>
 				<div class="flower f-2"></div>
@@ -647,7 +654,9 @@
 
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic.min.js"></script>
+    <!-- <script src="js/ScrollMagic.min.js"></script> -->
+    <script src="js/instafeed.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
     <!-- <script src="js/debug.addIndicators.min.js"></script> -->
 	<!-- <script src="js/TweenMax.min.js"></script> -->
 	<!-- <script src="js/CSSRulePlugin.min.js"></script> -->
