--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
 					<img src="images/main-parking.jpg" alt="Курсы рисования в Минске, студия Акварель" property="image">
 				</div>
 
+						<div class="insta-header-wrapper">
+							<a href="https://www.instagram.com/studiya.aquarelle/"><div class="insta-header-image"></div></a>
+							&#8195; Свежие&nbsp;публикации из &#8195;<a href="https://www.instagram.com/studiya.aquarelle/"> нашего&nbsp;Instagram</a> : &#8195;
+						</div>
+
+
 				<div id="instafeed" class="instafeed instagallery">	</div>
 
 				<div class="main-img-2">
@@ -550,10 +556,10 @@
 				ИП Домбровская - УНП 193072191
 			</div>
 
-			<div class="terms">
+<!-- 			<div class="terms">
 				<a href="terms.html">Пользовательское соглашение и политика конфиденциальности.</a>
 			</div>
-
+ -->
 	<!-- 		<div class="flowers">
 				<div class="flower f-1"></div>
 				<div class="flower f-2"></div>
