--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
 				<div class="main-block-1">
 					<p property="description" >Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответствующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
 					<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
-					<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
-					<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
+<!-- 					<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
+					<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p> -->
+					<h3>Курсы цифрового рисунка в Минске <br>(курсы рисования в Photoshop, Sai).</h3>
+					<p>Все более и более востребованной становится профессия цифрового художника. Сейчас существует огромное количество возможностей самореализации и хорошего заработка для художника - игровая индустрия, виртуальная реальность, фильмы, мультфильмы, книги, комиксы, продажа персонажей и концептов, стоки и тд.</p>
+					<p>В студии "Акварель" вы не только научитесь рисовать на графическом планшете, но и узнаете, куда и как расти  дальше, а также как можно заработать на своих рисунках.</p>
 					<p>Звоните, приходите, Вам понравится!</p>
 				</div>
 
@@ -140,14 +143,14 @@
 				<div class="main-block-4">
 					<h3>Наши перимущества:</h3>
 					<ul>
-						<li>Много свободного пространства на одного учащегося.</li><br>
+						<li>Много свободного пространства на одного учащегося.</li>
+						<li>Шагаем в ногу со временем - обучаем цифровому рисунку (имеется оборудованный класс).</li>><br>
 						<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
 						<li>Удобно добираться (5 мин) от станции метро "Спортивная".</li>
 						<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
 						<li>Индивидуальный подход (Начать можно в любое время, без оглядки на остальных).</li>
 						<li>Мы распологаем шикарной подборкой учебной литературы.</li>
-						<li>Чай, кофе, печеньки.</li>
-						<li>Регулярные матер-классы и выезды на пленеры.</li>
+						<li>Кофе паузы.</li>
 						<li>Всегда свободные места на парковке под окнами студии.</li>
 					</ul>
 				</div>
@@ -167,6 +170,30 @@
 				</div> -->
 				
 				<div class="courses-list" property="makesOffer">
+
+					<div class="course-card course-1">
+						<div class="course-image">
+							<img src="images/digital-drawing-2.jpg" alt="Курсы по цифровому рисунку в Минске. Photoshop, Sai.">
+						</div>
+						<div class="course-description">
+							<h2 class="course-header" property="name">
+								Курс "Цифровой рисунок".
+							</h2>
+							<div class="course-about" property="description">
+								<p>Курсы рисования на компьютере в программах Photoshop и Sai.</p>
+								<p>От 14 лет. Группы до 5 человек. <br>2 раза в неделю по 3 академических часа.</p>
+								<p>От самых азов до собственного персонажа в окружении.</p>
+							</div>
+						</div>
+			<!-- 			<a href="drawing-course-for-enrollee-minsk.html">
+							<div class="to-see-the-programm">
+								<p>Программа курса</p>
+							</div>
+						</a> -->
+						<div class="course-price">
+								<p>цена 200 руб/мес</p>
+						</div>
+					</div>
 
 					<div class="course-card course-0">
 						<div class="course-image kartina-maslom">
@@ -283,7 +310,7 @@
 						</div>
 					</div>
 				
-					<div class="course-card course-12">
+<!-- 					<div class="course-card course-12">
 						<div class="course-image">
 							<img src="images/for-masters.jpg" alt="Курсы повышения квалификации">
 						</div>
@@ -299,7 +326,7 @@
 						<div class="course-price">
 								<p>цена договорная</p>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="course-card course-7">
 						<div class="course-image">
