--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<h3>Наши перимущества:</h3>
 					<ul>
 						<li>Много свободного пространства на одного учащегося.</li>
-						<li>Шагаем в ногу со временем - обучаем цифровому рисунку (имеется оборудованный класс).</li>><br>
+						<li>Шагаем в ногу со временем - обучаем цифровому рисунку (имеется оборудованный класс).</li><br>
 						<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
 						<li>Удобно добираться (5 мин) от станции метро "Спортивная".</li>
 						<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
