--- a/painting-course-minsk.html
+++ b/painting-course-minsk.html
@@ -47,6 +47,18 @@
 		<h1>Программа курса "Академическая живопись"</h1>
 		<p class='wise-painter-said'>Краски у нас – орудие, они должны выражать наши мысли. Колорит наш – не изящные пятна, он должен выражать нам настроение картины, ее душу, он должен расположить и захватить всего зрителя, как аккорд в музыке.</p>
 		<p class='signature'>Илья Репин</p>
+
+		<div class="unit">
+			<div class="unit-header">
+				<div class="unit-number">Тема 1</div>
+				<div class="unit-duration">8 академ. часов</div>
+			</div>
+			
+			<div class="unit-topic">Живопись и ее связь с рисунком <br> …Гризайль.</div>
+			<div class="unit-practice">Практическая работа над выявлением связи между тоном и цветом на примере простого натюрморта.</div>
+
+		</div>
+
 		<table class="table " border="1">
 			<div class="table-row head">
 				<div class="t_numb">номер</div>
